🚧 一些配置调整